--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ anyio==4.12.1
 attrs==25.4.0
 certifi==2026.1.4
 edge-tts==7.2.7
+moviepy>=2.0.0
 flet==0.80.1
 flet-desktop==0.80.1
 frozenlist==1.8.0
